course_project_k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://auth.auth.svc.cluster.local:9000/auth"
    nginx.ingress.kubernetes.io/auth-signin: "http://$host/signin"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-User,X-Email,X-UserId,X-First-Name,X-Last-Name"
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - backend:
          serviceName: catalog-catalog-chart 
          servicePort: 9000
        path: /catalog/
      - backend:
          serviceName: catalog-catalog-chart 
          servicePort: 9000
        path: /catalog/search
      - backend:
          serviceName: catalog-catalog-chart 
          servicePort: 9000
        path: /catalog/brand
      - backend:
          serviceName: catalog-catalog-chart 
          servicePort: 9000
        path: /catalog/category                

      - backend:
          serviceName: orders-orders-chart 
          servicePort: 9000
        path: /orders/

      - backend:
          serviceName: history-history-chart  
          servicePort: 9000
        path: /history/all
      - backend:
          serviceName: history-history-chart 
          servicePort: 9000
        path: /history/
      - backend:
          serviceName: accounting-accounting-chart 
          servicePort: 9000
        path: /account/payment/
