course_project_k8s/auth-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: auth-proxy
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - backend:
          serviceName: auth
          servicePort: 9000
        path: /login
      - backend:
          serviceName: auth
          servicePort: 9000
        path: /signin
      - backend:
          serviceName: auth
          servicePort: 9000
        path: /logout
      - backend:
          serviceName: auth
          servicePort: 9000
        path: /register
      - backend:
          serviceName: auth
          servicePort: 9000
        path: /auth
#      - path: /otusauth($|/)(.*)
#        backend:
#          serviceName: auth
#          servicePort: 9000


#    http:
#      paths:
#      - path: /login
#        backend:
#          serviceName: auth
#          servicePort: 9000
#      - path: /auth
#        backend:
#          serviceName: auth
#          servicePort: 9000
#      - path: /otusauth($|/)(.*)
#        backend:
#          serviceName: auth
#          servicePort: 9000
